--- a/src/page/index/container/index.less
+++ b/src/page/index/container/index.less
@@ -1,3 +1,13 @@
+@import "css/sprites/btn.less"; 
+
 #pages {
 	color: yellow;
+}
+
+.icon3 {
+	.sprite(@gmail);
+}
+
+.icon4 {
+	.retina-sprite(@microsoft-group);
 }
