--- a/src/page/index/container/index.handlebars
+++ b/src/page/index/container/index.handlebars
@@ -1,6 +1,9 @@
 <div class="toast-overlay">
 	<div class="toast" id="toastInfo">
-		<div class="icons"></div>
+		<div class="icon1"></div>
+		<div class="icon2"></div>
+		<div class="icon3"></div>
+		<div class="icon4"></div>
 		<div class="toast-message" id="toastText">{{text}}</div>
 	</div>
 </div>
