--- a/tools/template/index/container/index.styl
+++ b/tools/template/index/container/index.styl
@@ -1,3 +1,13 @@
+@import "css/sprites/btn";
+
 body
 	background-color: black
 	border-radius: 5px
+
+.icon1 {
+  sprite($apple)
+}
+
+.icon2 {
+  retinaSprite($youtube_group)
+}
