--- a/tools/template/simple/main.html
+++ b/tools/template/simple/main.html
@@ -12,11 +12,11 @@
     <meta name="author" content="" />
     <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico"> 
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
-    <link rel="stylesheet" href="js/<% title %>">
+    <link rel="stylesheet" href="js/<% title %>.css">
 </head>
 <body>
     <div id="pages">hello world!</div>
-    <script src="libs/zepto"></script>
-    <script src="js/<% title %>"></script>
+    <script src="libs/zepto.js"></script>
+    <script src="js/<% title %>.js"></script>
 </body>
 </html>
