--- a/src/css/sprites/btn.less
+++ b/src/css/sprites/btn.less
@@ -12,118 +12,98 @@ At the bottom of this section, we provide information about the spritesheet itse
 @spritesheet: width height image @spritesheet-sprites;
 */
 @apple-name: 'apple';
-@apple-x: 0px;
+@apple-x: 276px;
 @apple-y: 0px;
-@apple-offset-x: 0px;
+@apple-offset-x: -276px;
 @apple-offset-y: 0px;
 @apple-width: 64px;
 @apple-height: 64px;
-@apple-total-width: 138px;
-@apple-total-height: 138px;
+@apple-total-width: 340px;
+@apple-total-height: 340px;
 @apple-image: '~btn.png';
-@apple: 0px 0px 0px 0px 64px 64px 138px 138px '~btn.png' 'apple';
+@apple: 276px 0px -276px 0px 64px 64px 340px 340px '~btn.png' 'apple';
+@apple-2x-name: 'apple@2x';
+@apple-2x-x: 0px;
+@apple-2x-y: 0px;
+@apple-2x-offset-x: 0px;
+@apple-2x-offset-y: 0px;
+@apple-2x-width: 128px;
+@apple-2x-height: 128px;
+@apple-2x-total-width: 340px;
+@apple-2x-total-height: 340px;
+@apple-2x-image: '~btn.png';
+@apple-2x: 0px 0px 0px 0px 128px 128px 340px 340px '~btn.png' 'apple@2x';
 @gmail-name: 'gmail';
-@gmail-x: 74px;
-@gmail-y: 0px;
-@gmail-offset-x: -74px;
-@gmail-offset-y: 0px;
+@gmail-x: 276px;
+@gmail-y: 74px;
+@gmail-offset-x: -276px;
+@gmail-offset-y: -74px;
 @gmail-width: 64px;
 @gmail-height: 64px;
-@gmail-total-width: 138px;
-@gmail-total-height: 138px;
+@gmail-total-width: 340px;
+@gmail-total-height: 340px;
 @gmail-image: '~btn.png';
-@gmail: 74px 0px -74px 0px 64px 64px 138px 138px '~btn.png' 'gmail';
+@gmail: 276px 74px -276px -74px 64px 64px 340px 340px '~btn.png' 'gmail';
+@gmail-2x-name: 'gmail@2x';
+@gmail-2x-x: 138px;
+@gmail-2x-y: 0px;
+@gmail-2x-offset-x: -138px;
+@gmail-2x-offset-y: 0px;
+@gmail-2x-width: 128px;
+@gmail-2x-height: 128px;
+@gmail-2x-total-width: 340px;
+@gmail-2x-total-height: 340px;
+@gmail-2x-image: '~btn.png';
+@gmail-2x: 138px 0px -138px 0px 128px 128px 340px 340px '~btn.png' 'gmail@2x';
 @microsoft-name: 'microsoft';
-@microsoft-x: 0px;
-@microsoft-y: 74px;
-@microsoft-offset-x: 0px;
-@microsoft-offset-y: -74px;
+@microsoft-x: 276px;
+@microsoft-y: 148px;
+@microsoft-offset-x: -276px;
+@microsoft-offset-y: -148px;
 @microsoft-width: 64px;
 @microsoft-height: 64px;
-@microsoft-total-width: 138px;
-@microsoft-total-height: 138px;
+@microsoft-total-width: 340px;
+@microsoft-total-height: 340px;
 @microsoft-image: '~btn.png';
-@microsoft: 0px 74px 0px -74px 64px 64px 138px 138px '~btn.png' 'microsoft';
+@microsoft: 276px 148px -276px -148px 64px 64px 340px 340px '~btn.png' 'microsoft';
+@microsoft-2x-name: 'microsoft@2x';
+@microsoft-2x-x: 0px;
+@microsoft-2x-y: 138px;
+@microsoft-2x-offset-x: 0px;
+@microsoft-2x-offset-y: -138px;
+@microsoft-2x-width: 128px;
+@microsoft-2x-height: 128px;
+@microsoft-2x-total-width: 340px;
+@microsoft-2x-total-height: 340px;
+@microsoft-2x-image: '~btn.png';
+@microsoft-2x: 0px 138px 0px -138px 128px 128px 340px 340px '~btn.png' 'microsoft@2x';
 @youtube-name: 'youtube';
-@youtube-x: 74px;
-@youtube-y: 74px;
-@youtube-offset-x: -74px;
-@youtube-offset-y: -74px;
+@youtube-x: 0px;
+@youtube-y: 276px;
+@youtube-offset-x: 0px;
+@youtube-offset-y: -276px;
 @youtube-width: 64px;
 @youtube-height: 64px;
-@youtube-total-width: 138px;
-@youtube-total-height: 138px;
+@youtube-total-width: 340px;
+@youtube-total-height: 340px;
 @youtube-image: '~btn.png';
-@youtube: 74px 74px -74px -74px 64px 64px 138px 138px '~btn.png' 'youtube';
-@retina-apple-name: 'retina_apple';
-@retina-apple-x: 0px;
-@retina-apple-y: 0px;
-@retina-apple-offset-x: 0px;
-@retina-apple-offset-y: 0px;
-@retina-apple-width: 128px;
-@retina-apple-height: 128px;
-@retina-apple-total-width: 276px;
-@retina-apple-total-height: 276px;
-@retina-apple-image: '~btn@2x.png';
-@retina-apple: 0px 0px 0px 0px 128px 128px 276px 276px '~btn@2x.png' 'retina_apple';
-@retina-gmail-name: 'retina_gmail';
-@retina-gmail-x: 148px;
-@retina-gmail-y: 0px;
-@retina-gmail-offset-x: -148px;
-@retina-gmail-offset-y: 0px;
-@retina-gmail-width: 128px;
-@retina-gmail-height: 128px;
-@retina-gmail-total-width: 276px;
-@retina-gmail-total-height: 276px;
-@retina-gmail-image: '~btn@2x.png';
-@retina-gmail: 148px 0px -148px 0px 128px 128px 276px 276px '~btn@2x.png' 'retina_gmail';
-@retina-microsoft-name: 'retina_microsoft';
-@retina-microsoft-x: 0px;
-@retina-microsoft-y: 148px;
-@retina-microsoft-offset-x: 0px;
-@retina-microsoft-offset-y: -148px;
-@retina-microsoft-width: 128px;
-@retina-microsoft-height: 128px;
-@retina-microsoft-total-width: 276px;
-@retina-microsoft-total-height: 276px;
-@retina-microsoft-image: '~btn@2x.png';
-@retina-microsoft: 0px 148px 0px -148px 128px 128px 276px 276px '~btn@2x.png' 'retina_microsoft';
-@retina-youtube-name: 'retina_youtube';
-@retina-youtube-x: 148px;
-@retina-youtube-y: 148px;
-@retina-youtube-offset-x: -148px;
-@retina-youtube-offset-y: -148px;
-@retina-youtube-width: 128px;
-@retina-youtube-height: 128px;
-@retina-youtube-total-width: 276px;
-@retina-youtube-total-height: 276px;
-@retina-youtube-image: '~btn@2x.png';
-@retina-youtube: 148px 148px -148px -148px 128px 128px 276px 276px '~btn@2x.png' 'retina_youtube';
-@spritesheet-width: 138px;
-@spritesheet-height: 138px;
+@youtube: 0px 276px 0px -276px 64px 64px 340px 340px '~btn.png' 'youtube';
+@youtube-2x-name: 'youtube@2x';
+@youtube-2x-x: 138px;
+@youtube-2x-y: 138px;
+@youtube-2x-offset-x: -138px;
+@youtube-2x-offset-y: -138px;
+@youtube-2x-width: 128px;
+@youtube-2x-height: 128px;
+@youtube-2x-total-width: 340px;
+@youtube-2x-total-height: 340px;
+@youtube-2x-image: '~btn.png';
+@youtube-2x: 138px 138px -138px -138px 128px 128px 340px 340px '~btn.png' 'youtube@2x';
+@spritesheet-width: 340px;
+@spritesheet-height: 340px;
 @spritesheet-image: '~btn.png';
-@spritesheet-sprites: @apple @gmail @microsoft @youtube;
-@spritesheet: 138px 138px '~btn.png' @spritesheet-sprites;
-@retina-spritesheet-width: 276px;
-@retina-spritesheet-height: 276px;
-@retina-spritesheet-image: '~btn@2x.png';
-@retina-spritesheet-sprites: @retina-apple @retina-gmail @retina-microsoft @retina-youtube;
-@retina-spritesheet: 276px 276px '~btn@2x.png' @retina-spritesheet-sprites;
-
-/*
-These "retina group" variables are mappings for the naming and pairing of normal and retina sprites.
-
-The list formatted variables are intended for mixins like `retina-sprite` and `retina-sprites`.
-*/
-@apple-group-name: 'apple';
-@apple-group: 'apple' @apple @retina-apple;
-@gmail-group-name: 'gmail';
-@gmail-group: 'gmail' @gmail @retina-gmail;
-@microsoft-group-name: 'microsoft';
-@microsoft-group: 'microsoft' @microsoft @retina-microsoft;
-@youtube-group-name: 'youtube';
-@youtube-group: 'youtube' @youtube @retina-youtube;
-@retina-groups: @apple-group @gmail-group @microsoft-group @youtube-group;
+@spritesheet-sprites: @apple @apple-2x @gmail @gmail-2x @microsoft @microsoft-2x @youtube @youtube-2x;
+@spritesheet: 340px 340px '~btn.png' @spritesheet-sprites;
 
 /*
 The provided classes are intended to be used with the array-like variables
@@ -178,36 +158,6 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
 }
 
 /*
-The `retina-sprite` class sets up rules and a media query for a sprite/retina sprite.
-  It should be used with a "retina group" variable.
-
-The media query is from CSS Tricks: https://css-tricks.com/snippets/css/retina-display-media-query/
-
-@icon-home-group: 'icon-home' @icon-home @icon-home-2x;
-
-.icon-home {
-  .retina-sprite(@icon-home-group);
-}
-*/
-.sprite-background-size(@sprite) {
-  @sprite-total-width: extract(@sprite, 7);
-  @sprite-total-height: extract(@sprite, 8);
-  background-size: @sprite-total-width @sprite-total-height;
-}
-
-.retina-sprite(@retina-group) {
-  @normal-sprite: extract(@retina-group, 2);
-  @retina-sprite: extract(@retina-group, 3);
-  .sprite(@normal-sprite);
-
-  @media (-webkit-min-device-pixel-ratio: 2),
-         (min-resolution: 192dpi) {
-    .sprite-image(@retina-sprite);
-    .sprite-background-size(@normal-sprite);
-  }
-}
-
-/*
 The `.sprites` mixin generates identical output to the CSS template
   but can be overridden inside of LESS
 
@@ -223,19 +173,4 @@ This must be run when you have at least 2 sprites.
     .sprite(@sprite);
   }
   .sprites(@sprites, @i + 1);
-}
-
-/*
-The `.retina-sprites` mixin generates a CSS rule and media query for retina groups
-  This yields the same output as CSS retina template but can be overridden in LESS
-
-.retina-sprites(@retina-groups);
-*/
-.retina-sprites(@retina-groups, @i: 1) when (@i <= length(@retina-groups)) {
-  @retina-group: extract(@retina-groups, @i);
-  @sprite-name: e(extract(@retina-group, 1));
-  .@{sprite-name} {
-    .retina-sprite(@retina-group);
-  }
-  .retina-sprites(@retina-groups, @i + 1);
 }
