--- a/src/page/index/container/index.less
+++ b/src/page/index/container/index.less
@@ -1,13 +1,7 @@
 @import "~btn.less";
 
-#pages {
-	color: yellow;
-}
-
-.icon3 {
-	.sprite(@gmail);
-}
-
-.icon4 {
-	// .retina-sprite(@microsoft-group);
+div {
+    margin: 0 auto;
+    display: flex;
+    text-align: center;
 }
