--- a/tools/template/simple/main.html
+++ b/tools/template/simple/main.html
@@ -12,11 +12,11 @@
     <meta name="author" content="" />
     <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
-    <link rel="stylesheet" href="js/<% title %>.css">
+    <link rel="stylesheet" href="<% title %>.css">
 </head>
 <body>
 	<div id="pages"></div>
     <script src="libs/zepto.js"></script>
-    <script src="js/<% title %>.js"></script>
+    <script src="<% title %>.js"></script>
 </body>
 </html>
